@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-10-11T01:51:55Z",
+  "timestamp" : "2025-10-17T01:57:21Z",
   "count_outdated" : 274,
   "uniques_outdated" : 240,
-  "count" : 277,
-  "uniques" : 243,
+  "count" : 278,
+  "uniques" : 244,
   "clones" : [
     {
       "timestamp": "2025-10-07T00:00:00Z",
@@ -25,6 +25,15 @@
     },
     {
       "timestamp": "2025-10-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-16T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
