@@ -1,3 +1,12 @@
+2025-10-17T01:57:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18580035092 # 799
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-17
+* notice: last 14d: unq all: 4 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 240 274 / 243 277
+* notice: next accum: outdated-unq outdated-all / unq all: 240 274 / 244 278
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-10-16]
+
 2025-10-11T01:51:55Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18422648497 # 793
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-11
